# wolfina-wiki

./: .env.example  .gitignore  CLAUDE.md  DEV_REFERENCE.md  agent_improvements.md  chat_demo.py  director_demo.py  longmemeval_demo.py  main.py  pyproject.toml  start.bat  start.sh  原始需求.md
api/: app.py  deps.py
api/routers/: conversations.py  debug.py  director.py  ingest.py  maintenance.py  pages.py  plugins.py  proposals.py  query.py
chatexample/: persona.json
core/: exceptions.py  settings.py
core/db/: base.py  session.py
core/debug/: event_stream.py
core/events/: event_bus.py  event_types.py
core/ipc/: __main__.py  ipc_handler.py
core/models/: conversation.py  director.py  ingest.py  maintenance.py  page.py  plugin.py  proposal.py
core/schemas/: conversation.py  page.py  plugin.py  proposal.py
core/services/: agent_service.py  conversation_service.py  director_service.py  janitor_service.py  llm_service.py  maintenance_scanners.py  page_service.py  plugin_service.py  prompt_blocks.py  proposal_service.py  scheduler_service.py  version_service.py
core/tools/: definitions.py  handlers.py
plugins/: base_plugin.py
plugins/example/: plugin.py
plugins/longmemeval/: __init__.py  plugin.py
plugins/wolfchat/: INTEGRATION_NOTES.md  config.json  plugin.py  router.py
tests/: conftest.py  test_longmemeval_demo.py  test_pages.py  test_plugins.py  test_proposals.py
